--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ langchain==0.3.27
 langchain_community==0.3.27
 streamlit==1.46.0
 transformers==4.53.3
+langchain-community
+unstructured
+beautifulsoup4
+html5lib
+lxml
+python-magic
